--- a/Halloapp/pt-br.lproj/Localizable.strings
+++ b/Halloapp/pt-br.lproj/Localizable.strings
@@ -940,6 +940,9 @@
 /* Alert text shown when max group size is reached when selecting/adding group members */
 "new.group.members.max.size.alert" = "O tamanho máximo do grupo é %d";
 
+/* Title for alert that pops up when user attempts to save an empty contact list */
+"no.contact.selected" = "Nenhum contato selecionado";
+
 /* Text shown to indicate user is not in the group anymore */
 "not.in.group.banner.text" = "Você não está mais neste grupo";
 
@@ -1203,6 +1206,9 @@
 
 /* Message to show when safety number is succesfully verified */
 "safety.number.verified" = "Número de segurança verificado com sucesso para %@!";
+
+/* Message that pops up when user attempts to save an empty contact list */
+"select.at.least.one.contact" = "Por favor selecione pelo menos um contato.";
 
 /* body of the marketing alert sent to users */
 "server.marketing.body" = "Convide seus amigos para desfrutar do HalloApp!";
