--- a/Halloapp/ru.lproj/Localizable.strings
+++ b/Halloapp/ru.lproj/Localizable.strings
@@ -940,6 +940,9 @@
 /* Alert text shown when max group size is reached when selecting/adding group members */
 "new.group.members.max.size.alert" = "Максимальный размер группы %d";
 
+/* Title for alert that pops up when user attempts to save an empty contact list */
+"no.contact.selected" = "Контакт не выбран";
+
 /* Text shown to indicate user is not in the group anymore */
 "not.in.group.banner.text" = "Вы больше не входите в эту группу";
 
@@ -1203,6 +1206,9 @@
 
 /* Message to show when safety number is succesfully verified */
 "safety.number.verified" = "Код безопасности для %@ проверен успешно!";
+
+/* Message that pops up when user attempts to save an empty contact list */
+"select.at.least.one.contact" = "Выберите хотя бы один контакт.";
 
 /* body of the marketing alert sent to users */
 "server.marketing.body" = "Пригласите друзей, чтобы они пользавали HalloApp!";
