--- a/Share Extension/de.lproj/InfoPlist.strings
+++ b/Share Extension/de.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Bundle display name */
-"CFBundleDisplayName" = "Freigabeerweiterung";
+"CFBundleDisplayName" = "Share Extension";
 
 /* Bundle name */
-"CFBundleName" = "Freigabeerweiterung";
+"CFBundleName" = "Share Extension";
 
