--- a/Share Extension/id.lproj/Localizable.strings
+++ b/Share Extension/id.lproj/Localizable.strings
@@ -4,6 +4,9 @@
 /* Message to tell the user to try again when they have internet connectivity again */
 "alert.no.internet.try.again" = "Periksa apakah Anda tersambung ke internet, lalu coba lagi.";
 
+/* Company name */
+"app.name.halloapp" = "HalloApp";
+
 /* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
 "button.add" = "Tambah";
 
@@ -27,6 +30,9 @@
 
 /* Title for button that will take user to iOS settings (e.g., to enable some permission we need). */
 "button.go.to.settings" = "Ke Pengaturan";
+
+/* Title for generic Invite button. */
+"button.invite" = "Undang";
 
 /* Title for generic Learn More button. Used to provide user with additional context to actions requested. */
 "button.learn.more" = "Selengkapnya";
@@ -55,11 +61,29 @@
 /* Title for generic Share button. Mostly used to complete some modal flow. */
 "button.share" = "Bagikan";
 
+/* Title for generic Stop button. Currently used to stop an audio recording) */
+"button.stop" = "Stop";
+
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Perbarui";
 
+/* Alert message when missing microphone access */
+"chat.mic.access.denied.message" = "Untuk mengaktifkan perekaman audio, silakan ketuk Pengaturan lalu nyalakan Mikrofon";
+
+/* Alert title when missing microphone access */
+"chat.mic.access.denied.title" = "Gagal mengakses mikrofon";
+
 /* Title for generic delete button. */
 "Delete" = "Hapus";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.all" = "Bagikan dengan semua kontak";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.except" = "Bagikan dengan kontak kecuali orang yang saya pilih";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.only" = "Hanya bagikan dengan kontak pilihan";
 
 /* Generic label for search, mostly used as placeholder text for searchbar */
 "label.search" = "Cari";
@@ -70,8 +94,20 @@
 /* Link that when tapped will open App Store so user can update to the latest version of the app. */
 "link.update.your.app" = "Perbarui aplikasimu.";
 
+/* Displayed while waiting for link preview to load */
+"loading.preview" = "Memuat Pratinjau...";
+
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Saya";
+
+/* Button title. Refers to discarding photo/video edits in media composer. */
+"media.button.discard" = "Buang";
+
+/* String to auto-fill if a user tried to share to a friend. */
+"settings.share.text" = "Bergabunglah dengan jaringan relasi sungguhan saya di HalloApp. Unduh gratis di halloapp.com/dl";
+
+/* Label above the list with whom you share */
+"share.composer.destinations.label" = "Bagikan dengan";
 
 /* Placeholder for media caption. */
 "share.composer.placeholder" = "Tuliskan deskripsi";
@@ -98,13 +134,20 @@
 "share.composer.uploading.fail.title" = "Gagal mengunggah";
 
 /* Contacts category label */
-"share.destination.contacts" = "Kontak";
+"share.destination.contacts" = "Kontak Terkini";
 
 /* Groups category label */
-"share.destination.groups" = "Grup";
+"share.destination.groups" = "Grupmu";
 
 /* Share on the home feed label */
 "share.destination.home" = "Beranda";
+
+/* Alert title when a direct to contact sharing is missing
+   Alert title when a direct to group sharing is missing */
+"share.destination.missing.group" = "Grup hilang %@";
+
+/* Share on the home feed selection cell */
+"share.destination.new" = "Postingan Baru";
 
 /* Destination screen title */
 "share.destination.title" = "HalloApp";
@@ -115,6 +158,15 @@
 /* Title of alert when user is not logged in */
 "share.notlogged.title" = "Kamu tidak masuk";
 
+/* Row in Settings screen */
+"title.privacy" = "Privasi";
+
 /* Displayed in place of contact name if name is not known. */
 "unknown.contact" = "Kontak Tak Dikenal";
+
+/* How many bytes from total have been uploaded */
+"uploading.bytes.progress" = "%1$@ dari %2$@";
+
+/* Message how many items are currently being upload */
+"uploading.n.items" = "item.n.unggahan";
 
