--- a/Share Extension/nl.lproj/Localizable.strings
+++ b/Share Extension/nl.lproj/Localizable.strings
@@ -142,6 +142,10 @@
 /* Share on the home feed label */
 "share.destination.home" = "Home";
 
+/* Alert title when a direct to contact sharing is missing
+   Alert title when a direct to group sharing is missing */
+"share.destination.missing.group" = "Groep %@ ontbreekt";
+
 /* Share on the home feed selection cell */
 "share.destination.new" = "Nieuwe Post";
 
