--- a/Share Extension/fa.lproj/Localizable.strings
+++ b/Share Extension/fa.lproj/Localizable.strings
@@ -142,6 +142,10 @@
 /* Share on the home feed label */
 "share.destination.home" = "صفحه اصلی";
 
+/* Alert title when a direct to contact sharing is missing
+   Alert title when a direct to group sharing is missing */
+"share.destination.missing.group" = "گروه %@ یافت نشد";
+
 /* Share on the home feed selection cell */
 "share.destination.new" = "پست جدید";
 
