--- a/Halloapp/es.lproj/Localizable.strings
+++ b/Halloapp/es.lproj/Localizable.strings
@@ -349,6 +349,12 @@
 /* Text displayed in gray inside of the comment input field when there is no user input. */
 "comment.textfield.placeholder" = "Añadir un comentario";
 
+/* Header that appears above all the unread comments in the comments view when there are more than one unread message */
+"comment.unread.messages.header.plural" = "%@ Comentarios sin leer";
+
+/* Header that appears above one single unread message in the comments view. */
+"comment.unread.messages.header.single" = "%@ Comentarios sin leer";
+
 /* Text displayed in place of a comment that is not supported in the current app version. */
 "comment.unsupported" = "Tu versión de HalloApp no admite este tipo de comentarios.";
 
@@ -706,6 +712,12 @@
 /* Title of group invite screen */
 "group.invite.title" = "Enlace de invitación al grupo";
 
+/* Title of invite sheet */
+"group.invitesheet.title" = "Compartir esta publicación con amigos y familia y ellos se unirán automáticamente a HalloApp";
+
+/* Section header describing options to share link */
+"group.invitesheet.use.link.via" = "Compartir enlace usando...";
+
 /* Label shown above group members list */
 "group.members.label" = "Participantes";
 
@@ -987,6 +999,9 @@
 
 /* New post notification text when post is one video without caption. */
 "notification.one.video" = "📹 video";
+
+/* Missed voice call notification text to be shown to the user. */
+"notification.voicecall.missed" = "☎️ Llamada de voz perdida";
 
 /* New post notification text when post is a voice note. */
 "notification.voicenote" = "🎤 Nota de voz";
